--- a/9章演習問題.html
+++ b/9章演習問題.html
@@ -15,7 +15,7 @@
     <section class="box">
       <div class="box-item1"></div>
       <h3>タイトルが入ります</h3>
-      <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      <p>文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
       <span class="step">STEP1</span>
     </section>
     <section class="box">
